[package]
name          = "ansi_colours"
description   = "true-colour ↔ ANSI terminal palette converter"
version       = "1.0.4"
readme        = "README.md"
authors       = ["Michał Nazarewicz <mina86@mina86.com>"]
keywords      = ["ansi", "terminal", "color", "rgb"]
categories    = ["command-line-interface"]
license       = "LGPL-3.0-or-later"
repository    = "https://github.com/mina86/ansi_colours"
documentation = "https://docs.rs/ansi_colours"
exclude       = ["tools/**"]
edition       = "2018"

[badges]
maintenance = { status = "actively-developed" }

[dev-dependencies]
empfindung = "0.2"
lab = ">=0.4, <1.0"

[build-dependencies]
cc = "^1.0"

[profile.release]
lto = true
panic = 'abort'
